# llm_summarization_br_ca

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE_LANGCHAIN_ECOSYSTEM.md  DEEPEVAL_METRICS_CATALOG.md  FINAL_METRICS_SELECTION.md  Files Created.txt  HCAT_FRAMEWORK_SUMMARY.md  LLM Oncologic Summary Evaluation Project_ Project Summary.docx  Prompt Engineering Template.txt  colab_pipeline_guide.md  dataset_metadata.md  executive_summary.md  github_push_instructions.md  gpt-5_prompting_guide.ipynb  hcat_metrics_selection.md  langgraph_agentic_rag_design.md  project_directory_structure_privacy_rules.md  project_outline_variables_defined_output_format.docx
manuscript_components/: acs_abstract_v2.docx  acs_clincal_congress_abstract_draft_moo edits 3 3 2026.docx
notebooks/: 01_deidentification.ipynb  02_executed.ipynb  02_missing_data_analysis.ipynb  03_eda_classification_diagnostic_metrics.ipynb  03_executed.ipynb  04_executed.ipynb  04_source_doc_text_extraction.ipynb  05_feature_extraction_ocr_bert.ipynb  06_executed.ipynb  06_metadata_data_dictionary.ipynb  07_validation_methods_comparison.ipynb  08_ocr_image_quality_deblur.ipynb  09_mcodegpt_dag_extraction.ipynb  10_openai_predictive_model.ipynb  12_langgraph_deepeval_integration.ipynb
prompts/: mcode_structure.xlsx  prompt_library.csv
references/: REFERENCES_INDEX.md  environment_setup.md  file_names_bot_questions.txt  final_optics_wip_presentation.pptx  ocr_deblur_metrics_prepost.py  presentation outline.docx
repo/: Makefile  requirements.txt
src/: placeholder.txt
(+172 files in other folders)
