[project]
name = "llm-summarization-br-ca"
version = "1.0.0"
description = "Prompt-Technique Evaluation for Feature-Level Human vs LLM Clinical Feature Extraction — Memorial Sloan Kettering | Goel Lab"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.1.1",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "openpyxl>=3.1",
    "tqdm>=4.65",
    "PyMuPDF>=1.23",
    "pytesseract>=0.3",
    "opencv-python>=4.8",
    "Pillow>=10.0",
    "anthropic>=0.20",
    "sentence-transformers>=2.2",
]

[project.optional-dependencies]
dl = [
    "tensorflow>=2.14",
    "tensorflow-hub>=0.15",
]
h2o = [
    "h2o>=3.42",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
]
